--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-messages": "^1.0.0",
+    "moment": "^2.11.2",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
